--- a/teaming/stylesheet.css
+++ b/teaming/stylesheet.css
@@ -331,9 +331,10 @@ img {
 /* Fading animation */
 .fade {
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 5.5s;
 }
 
+/* Slide show */
 @keyframes fade {
   from {
     opacity: .4
@@ -348,4 +349,20 @@ img {
   .text {
     font-size: 11px
   }
+}
+
+/* Display text after hovering on an image */
+.overlay {
+  position: absolute; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1; 
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
 }
