--- a/teaming/stylesheet.css
+++ b/teaming/stylesheet.css
@@ -178,10 +178,13 @@ span.highlight {
 }
 
 input[type="text"] {
-  padding: 3px; /* reduce padding */
+  padding: 3px;
+  /* reduce padding */
   border: 1px solid #ccc;
-  border-radius: 3px; /* reduce border radius */
-  width: 200px; /* reduce width */
+  border-radius: 3px;
+  /* reduce border radius */
+  width: 200px;
+  /* reduce width */
 }
 
 
@@ -271,15 +274,17 @@ button:hover {
 }
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box
 }
 
 body {
   font-family: Verdana, sans-serif;
+  margin: 0
 }
 
 .mySlides {
   display: none;
+  text-align: center;
 }
 
 img {
@@ -288,14 +293,15 @@ img {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
   position: relative;
   margin: auto;
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color: maroon;
+  font-weight: bold;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -304,9 +310,37 @@ img {
   text-align: center;
 }
 
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 100%;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev,
+.next {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: aqua;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -315,6 +349,7 @@ img {
 
 /* The dots/bullets/indicators */
 .dot {
+  cursor: pointer;
   height: 15px;
   width: 15px;
   margin: 0 2px;
@@ -324,45 +359,33 @@ img {
   transition: background-color 0.6s ease;
 }
 
-.active {
+.active,
+.dot:hover {
   background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
   animation-name: fade;
-  animation-duration: 5.5s;
+  animation-duration: 1.5s;
 }
 
-/* Slide show */
 @keyframes fade {
   from {
     opacity: .4
   }
+
   to {
     opacity: 1
   }
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
+@media only screen {
+
+  .prev,
+  .next,
   .text {
     font-size: 11px
   }
-}
-
-/* Display text after hovering on an image */
-.overlay {
-  position: absolute; 
-  bottom: 0; 
-  background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.5); /* Black see-through */
-  color: #f1f1f1; 
-  width: 100%;
-  transition: .5s ease;
-  opacity:0;
-  color: white;
-  font-size: 20px;
-  padding: 20px;
-  text-align: center;
 }
