--- a/teaming/stylesheet.css
+++ b/teaming/stylesheet.css
@@ -313,34 +313,27 @@ img {
 /* Next & previous buttons */
 .prev,
 .next {
+  /*background-color: rgba(0, 0, 0, 0.8);*/
   cursor: pointer;
-  position: absolute;
-  top: 100%;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
+  color: blue;
   font-weight: bold;
   font-size: 20px;
-  border-radius: 0 3px 3px 0;
+  /*border-radius: 0 3px 3px 0;*/
   user-select: none;
   -webkit-user-select: none;
+
 }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
+  /*border-radius: 3px 0 0 3px;*/
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev,
-.next {
-  background-color: rgba(0, 0, 0, 0.8);
-}
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: aqua;
+  color: lightskyblue;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -353,7 +346,7 @@ img {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: lightsteelblue;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -361,7 +354,7 @@ img {
 
 .active,
 .dot:hover {
-  background-color: #717171;
+  background-color: lightskyblue;
 }
 
 /* Fading animation */
