--- a/teaming/stylesheet.css
+++ b/teaming/stylesheet.css
@@ -187,7 +187,6 @@ input[type="text"] {
   /* reduce width */
 }
 
-
 button {
   padding: 5px 10px;
   border: none;
@@ -232,6 +231,7 @@ button:hover {
 #search-bar button:hover {
   background-color: #1e88e5;
 }
+
 
 #prev-btn,
 #next-btn {
@@ -281,105 +281,112 @@ body {
   font-family: Verdana, sans-serif;
   margin: 0
 }
-
-.mySlides {
-  display: none;
-  text-align: center;
-}
+/* SLIDESHOW STUFF */
 
 img {
   vertical-align: middle;
 }
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 100%;
-  position: relative;
-  margin: auto;
-}
-
 /* Caption text */
-.text {
+figcaption {
   color: maroon;
   font-weight: bold;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
+  font-size: 11px;
+  position: relative;
   width: 100%;
   text-align: center;
 }
 
-/* Next & previous buttons */
-.prev,
-.next {
-  /*background-color: rgba(0, 0, 0, 0.8);*/
+.slide-container .prev,
+.slide-container .next {
   cursor: pointer;
-  color: blue;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
   font-weight: bold;
   font-size: 20px;
-  /*border-radius: 0 3px 3px 0;*/
+  transition: all 0.6s ease;
+  border-radius: 0 3px 3px 0;
   user-select: none;
-  -webkit-user-select: none;
-
 }
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  /*border-radius: 3px 0 0 3px;*/
+.slide-container .prev:hover,
+.slide-container .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
 }
 
-
-/* Number text (1/3 etc) */
-.numbertext {
-  font-weight: bold;
-  color: lightskyblue;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+.slide-container .prev {
+  left: 2px;
 }
 
-/* The dots/bullets/indicators */
-.dot {
+.slide-container .next {
+  right: 2px;
+}
+
+.dots-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.dots-container .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: lightsteelblue;
+  margin: 5px;
+  width: 20px;
+  height: 20px;
+  color: #333;
   border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+  background-color: rgb(233, 240, 250);
+  border: 1px solid rgb(193, 224, 247);
 }
 
-.active,
-.dot:hover {
-  background-color: lightskyblue;
+.dots-container .dot.active {
+  border: 2px solid lightskyblue;
 }
 
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+* {
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
 }
 
-@keyframes fade {
-  from {
-    opacity: .4
-  }
-
-  to {
-    opacity: 1
-  }
+body {
+  height: 100%;
+/*   background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%); */
 }
 
-/* On smaller screens, decrease text size */
-@media only screen {
+body h1 {
+  text-align: center;
+}
 
-  .prev,
-  .next,
-  .text {
-    font-size: 11px
-  }
+.slide-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 80%;
+  margin: auto;
+  position: relative;
+}
+
+.slide-container .slide {
+  display: none;
+  width: 100%;
+}
+
+.slide-container .slide.fade {
+  animation: fade 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+}
+
+.slide-container .slide img {
+  width: 100%;
+}
+
+.slide.fade{
+  cursor: pointer;
 }
