best view footer

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,4 @@
 <!-- start custom footer snippets -->
+<p>Website best viewed in Google Chrome</p>
 <a href="/sitemap/">Sitemap</a>
 <!-- end custom footer snippets -->
