--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -99,6 +99,7 @@
   display: table-cell;
   vertical-align: top;
   width: 550px;
+  margin-bottom: 10px;
   // set width only, for non-square avatars
   // height: 36px;
 
