--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -120,6 +120,8 @@
 {% endif %}
     </ul>
   </div>
+  <p>Website best viewed in Google Chrome.</p>
+  <br>
   <p>May 2022</p>
   <div class="author__image">
     {% if author.image contains "://" %}
@@ -138,7 +140,7 @@
     {% endif %}
   </div>
   <p>May 2023</p>
-  <div class="author__image">
+  <div class="author__image_3">
     {% if author.image_3 contains "://" %}
       <img src="{{ author.image_3 }}" alt="{{ author.name }}">
     {% else %}
