--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -120,7 +120,7 @@
 {% endif %}
     </ul>
   </div>
-  <p>Website best viewed in Google Chrome.</p>
+  <p><mark>Disclaimer: Website best viewed in Google Chrome.</mark></p>
   <br>
   <p>May 2022</p>
   <div class="author__image">
