--- a/teaming/stylesheet.css
+++ b/teaming/stylesheet.css
@@ -484,5 +484,5 @@ body {font-family: Arial, Helvetica, sans-serif;}
 #myImg {
   float: right;
   border: 1px dotted black;
-  /*margin: 0px 0px 15px 20px;*/
+  margin: 0px 0px 15px 20px;
 }
