--- a/teaming/stylesheet.css
+++ b/teaming/stylesheet.css
@@ -486,3 +486,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   border: 1px dotted black;
   margin: 0px 0px 15px 20px;
 }
+
+.imageLeft, .imageRight {
+  display: inline-block;
+}
