--- a/teaming/stylesheet.css
+++ b/teaming/stylesheet.css
@@ -490,3 +490,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .imageLeft, .imageRight {
   display: inline-block;
 }
+
+h3{
+  padding: 0px;
+  margin: 0px;
+}
