--- a/teaming/stylesheet.css
+++ b/teaming/stylesheet.css
@@ -392,30 +392,48 @@ body h1 {
   cursor: pointer;
 }
 
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
+<style>body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-#myImg, #myImg2, #myImg3, #myImg4 {
+#myImg,
+#myImg2,
+#myImg3,
+#myImg4 {
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
 }
 
-#myImg:hover, #myImg2:hover, #myImg3:hover, #myImg4:hover {opacity: 0.7;}
+#myImg:hover,
+#myImg2:hover,
+#myImg3:hover,
+#myImg4:hover {
+  opacity: 0.7;
+}
 
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9);
+  /* Black w/ opacity */
 }
 
 /* Modal Content (image) */
@@ -439,7 +457,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 /* Add Animation */
-.modal-content, #caption {  
+.modal-content,
+#caption {
   -webkit-animation-name: zoom;
   -webkit-animation-duration: 0.6s;
   animation-name: zoom;
@@ -447,13 +466,23 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 @-webkit-keyframes zoom {
-  from {-webkit-transform:scale(0)} 
-  to {-webkit-transform:scale(1)}
+  from {
+    -webkit-transform: scale(0)
+  }
+
+  to {
+    -webkit-transform: scale(1)
+  }
 }
 
 @keyframes zoom {
-  from {transform:scale(0)} 
-  to {transform:scale(1)}
+  from {
+    transform: scale(0)
+  }
+
+  to {
+    transform: scale(1)
+  }
 }
 
 /* The Close Button */
@@ -475,23 +504,27 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 700px) {
   .modal-content {
     width: 100%;
   }
 }
 
-#myImg, #myImg2, #myImg3, #myImg4 {
+#myImg,
+#myImg2,
+#myImg3,
+#myImg4 {
   float: right;
   border: 1px dotted black;
   margin: 0px 0px 15px 20px;
 }
 
-.imageLeft, .imageRight {
+.imageLeft,
+.imageRight {
   display: inline-block;
 }
 
-h3{
+h3 {
   padding: 0px;
   margin: 0px;
 }
