--- a/teaming/stylesheet.css
+++ b/teaming/stylesheet.css
@@ -403,6 +403,7 @@ body {
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
+  
 }
 
 #myImg:hover,
@@ -410,6 +411,7 @@ body {
 #myImg3:hover,
 #myImg4:hover {
   opacity: 0.7;
+  border: 3px solid violet;
 }
 
 /* The Modal (background) */
