--- a/projects/teaming/stylesheet.css
+++ b/projects/teaming/stylesheet.css
@@ -530,3 +530,28 @@ h3 {
   padding: 0px;
   margin: 0px;
 }
+
+/* collapsible sections */
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #555;
+}
+
+.content {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
