--- a/projects/teaming/stylesheet.css
+++ b/projects/teaming/stylesheet.css
@@ -532,26 +532,78 @@ h3 {
 }
 
 /* collapsible sections */
-.collapsible {
-  background-color: #777;
-  color: white;
+summary {
+  background-color: rgba(0, 255, 255, 0.35); 
+  color: black;
   cursor: pointer;
   padding: 18px;
+  border-radius: 10px;
   width: 100%;
-  border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  list-style: none;
+  position: relative;
+  font-size: 18px;
 }
 
-.active, .collapsible:hover {
-  background-color: #555;
+summary:hover {
+  background-color: rgba(0, 255, 255, 0.50); /* Change color on hover */
+  box-shadow: 0px 1px 2px gray;
+}
+
+details > summary::-webkit-details-marker {
+  display: none;
+}
+
+details > summary::before {
+  content: '▶\00a0\00a0'; /* Unicode character for right arrow */
+  left: 10px;
+  transition: transform 0.3s ease-in-out;
+  display: inline-block;
+}
+
+details[open] > summary::before {
+  transform: rotate(90deg);
+  transition: transform 0.3s ease-in-out;
 }
 
 .content {
   padding: 0 18px;
+  overflow: hidden;
   background-color: white;
   max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  animation: fadeIn 1.5s ease-out; /* Animation effect for opening */
+}
+
+details[open] > .content {
+  /*max-height: 1000px;*/ /* Adjust the value based on your content height */
+  max-height: 100%;
+}
+
+details[close] > .content {
+  animation: fadeOut 0.5s ease-out; /* Animation effect for closing */
+
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    opacity: 1;
+    /*max-height: 1000px; *//* Adjust the value based on your content height */
+    max-height: 100%;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    /*max-height: 1000px;*/ /* Adjust the value based on your content height */
+    max-height: 100%;
+  }
+  to {
+    opacity: 0;
+    max-height: 0;
+  }
 }
