--- a/projects/group_rec/stylesheet.css
+++ b/projects/group_rec/stylesheet.css
@@ -396,7 +396,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#myImg,
+#myImg0,
+#myImg1,
 #myImg2,
 #myImg3,
 #myImg4 {
@@ -406,7 +407,8 @@ body {
   
 }
 
-#myImg:hover,
+#myImg0:hover,
+#myImg1:hover,
 #myImg2:hover,
 #myImg3:hover,
 #myImg4:hover {
