--- a/stylesheet.css
+++ b/stylesheet.css
@@ -512,7 +512,7 @@ button:hover {
   padding: 0.3em 0.6em;
   border-radius: 0.3em;
   margin-left: 0.5em;
-  vertical-align: super;
+  /*vertical-align: super;*/
   cursor: pointer;
   transition: all 0.3s ease;
   border: 1px solid #C5A358;
