--- a/stylesheet.css
+++ b/stylesheet.css
@@ -281,6 +281,8 @@ button:hover {
   transition: opacity 1s ease-in-out;
 }
 
+
+
 /* Caption Styles */
 .caption {
   position: absolute;
@@ -306,7 +308,7 @@ button:hover {
   width: auto;
   padding: 16px;
   margin-top: -22px; /* Adjust if necessary */
-  color: white;
+  color: rgb(255, 113, 36);
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -748,6 +750,23 @@ button:hover {
   color: #333;
   margin-bottom: 15px;
 }
+
+/* Hide all slides by default */
+.research-spotlight-slide {
+  display: none;
+}
+
+/* Show the first slide by default */
+.research-spotlight-slide:first-child {
+  display: block;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  max-width: 100%;
+}
+
 
 .poster-thumbnail {
   max-width: 200px; /* Adjust the size as needed */
