--- a/stylesheet.css
+++ b/stylesheet.css
@@ -730,7 +730,7 @@ button:hover {
 
 /* Government Fund Source Tag */
 .tag-government-source {
-  background-color: #FF9800;
+  background-color: #4CAF50;
 }
 
 .tag-government-source::before {
