--- a/projects/group_rec/stylesheet.css
+++ b/projects/group_rec/stylesheet.css
@@ -611,3 +611,17 @@ details[close] > .content {
     max-height: 0;
   }
 }
+
+.demo-box {
+  border: 2px solid #59bcfe;
+  border-radius: 5px;
+  padding: 15px;
+  background-color: #f3fffe;
+  box-shadow: 2px 2px 8px rgba(59, 72, 255, 0.474);
+  margin: 20px 0;
+}
+
+.demo-box h4 {
+  margin: 0 0 10px 0;
+  color: #018b92;
+}
